# ChangeLog for x11-misc/dmenu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/dmenu/ChangeLog,v 1.34 2008/07/20 14:36:03 cedk Exp $

  20 Jul 2008; Cédric Krier <cedk@gentoo.org> -dmenu-3.3.ebuild,
  -dmenu-3.4.ebuild, -dmenu-3.5.ebuild, -dmenu-3.6.ebuild,
  -dmenu-3.7.ebuild:
  Remove old

*dmenu-3.7-r1 (20 Jul 2008)

  20 Jul 2008; Cédric Krier <cedk@gentoo.org> +files/dmenu-3.7.patch,
  +dmenu-3.7-r1.ebuild:
  Add patch for bug #231044

  16 Jul 2008; Alexis Ballier <aballier@gentoo.org> dmenu-3.7.ebuild:
  keyword ~x86-fbsd, thanks to Davide Italiano <dav_it@gentoo.org>, bug
  #231216.

*dmenu-3.7 (19 Jun 2008)

  19 Jun 2008; Cédric Krier <cedk@gentoo.org> +dmenu-3.7.ebuild:
  Version bump

*dmenu-3.6 (04 Apr 2008)

  04 Apr 2008; Cédric Krier <cedk@gentoo.org> +dmenu-3.6.ebuild:
  Version bump

*dmenu-3.5 (16 Mar 2008)

  16 Mar 2008; Cédric Krier <cedk@gentoo.org> +dmenu-3.5.ebuild:
  Version bump

*dmenu-3.4 (16 Nov 2007)

  16 Nov 2007; Cédric Krier <cedk@gentoo.org> +dmenu-3.4.ebuild:
  Version bump

*dmenu-3.3 (22 Sep 2007)

  22 Sep 2007; Cédric Krier <cedk@gentoo.org> +dmenu-3.3.ebuild:
  Version bump

  25 Jul 2007; Christoph Mende <angelos@gentoo.org> dmenu-3.2.ebuild:
  Stable on amd64 wrt bug #185308

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> dmenu-3.2.ebuild:
  Stable on ppc64; bug #185310

  16 Jul 2007; nixnut <nixnut@gentoo.org> dmenu-3.2.ebuild:
  Stable on ppc wrt bug 185310

  14 Jul 2007; Torsten Veller <tove@gentoo.org> dmenu-3.2.ebuild:
  Stable on x86

  14 Jul 2007; Cédric Krier <cedk@gentoo.org> -dmenu-3.0.ebuild,
  -dmenu-3.1.ebuild:
  Remove old

*dmenu-3.2 (30 May 2007)

  30 May 2007; Cédric Krier <cedk@gentoo.org> -dmenu-2.8.ebuild,
  +dmenu-3.2.ebuild:
  Version bump

*dmenu-3.1 (21 May 2007)

  21 May 2007; Cédric Krier <cedk@gentoo.org> +dmenu-3.1.ebuild:
  Version bump

*dmenu-3.0 (20 Apr 2007)
