@@ -1,12 +1,12 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/dmenu/dmenu-3.2.ebuild,v 1.5 2007/07/25 21:25:44 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/dmenu/dmenu-3.2.ebuild,v 1.6 2008/07/20 14:38:42 cedk Exp $
 
 inherit toolchain-funcs savedconfig
 
 DESCRIPTION="a generic, highly customizable, and efficient menu for the X Window System"
-HOMEPAGE="http://tools.suckless.org/view.sh/x+tools"
-SRC_URI="http://suckless.org/download/${P}.tar.gz"
+HOMEPAGE="http://www.suckless.org/programs/dmenu.html"
+SRC_URI="http://code.suckless.org/dl/tools/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
